@@ -1,18 +1,30 @@
 package org.tenok.coin;
 
+import java.io.BufferedReader;
+import java.io.IOException;
+import java.io.InputStreamReader;
+import java.net.MalformedURLException;
 import java.net.URI;
+import java.net.URL;
+import java.security.Timestamp;
 
 import javax.crypto.Mac;
 import javax.crypto.spec.SecretKeySpec;
+import javax.net.ssl.HttpsURLConnection;
 import javax.websocket.*;
 
 import org.json.simple.JSONObject;
 
+import jdk.javadoc.internal.doclets.toolkit.resources.doclets;
+
+import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.LinkedList;
 import java.util.List;
+import java.util.Map;
+import java.util.Stack;
 
 public class App {
-
 
     static String api_key = "asld2k4fj12kd3";
     static String api_secret = "634dl1ld54el2";
@@ -20,12 +32,14 @@ public class App {
     public static final String MAINNET_PUBLIC_URI = "wss://stream.bybit.com/realtime_public";
     public static final String MAINNET_PRIVATE_URI = "wss://stream.bybit.com/realtime_private";
 
-    public static String generate_signature(String expires){ return sha256_HMAC("GET/realtime"+ expires, api_secret); }
+    public static String generate_signature(String expires) {
+        return sha256_HMAC("GET/realtime" + expires, api_secret);
+    }
 
     private static String byteArrayToHexString(byte[] b) {
         StringBuilder hs = new StringBuilder();
         String stmp;
-        for (int n = 0; b!=null && n < b.length; n++) {
+        for (int n = 0; b != null && n < b.length; n++) {
             stmp = Integer.toHexString(b[n] & 0XFF);
             if (stmp.length() == 1)
                 hs.append('0');
@@ -50,11 +64,11 @@ public class App {
     }
 
     @SuppressWarnings("unchecked")
-    public static String getAuthMessage(){
-        JSONObject req=new JSONObject();
+    public static String getAuthMessage() {
+        JSONObject req = new JSONObject();
         req.put("op", "auth");
         List<String> args = new LinkedList<String>();
-        String expires = String.valueOf(System.currentTimeMillis()+1000);
+        String expires = String.valueOf(System.currentTimeMillis() + 1000);
         args.add(api_key);
         args.add(expires);
         args.add(generate_signature(expires));
@@ -63,7 +77,7 @@ public class App {
     }
 
     @SuppressWarnings("unchecked")
-    public static String subscribe(String op, String argv){
+    public static String subscribe(String op, String argv) {
         JSONObject req = new JSONObject();
         req.put("op", op);
         List<String> args = new LinkedList<String>();
@@ -73,33 +87,70 @@ public class App {
     }
 
     @SuppressWarnings("unchecked")
-    public static void main(String[] args) {
+    public static void main(String[] args) throws MalformedURLException, IOException {
+        Map<String, String> request = new HashMap<>();
+        request.put("symbol", "LINKUS");
+        request.put("interval", "15");
+        request.put("limit", "200");
+        request.put("from", "1611187200");
+        
+        StringBuilder url = new StringBuilder("https://api.bybit.com/public/linear/kline?");
+        request.forEach((k, v) -> {
+            url.append(String.format("%s=%s&", k, v));
+        });
+        url.deleteCharAt(url.length()-1);
 
-        try {
-            WebSocketContainer container = ContainerProvider.getWebSocketContainer();
-            //String uri = "wss://stream.bybit.com/realtime";
-            // String uri = "wss://stream.bytick.com/realtime";
-            // String uri = "wss://stream-testnet.bybit-cn.com/realtime";
-            // String uri = "wss://stream-testnet.bybit.com/realtime";
-            container.connectToServer(BybitWebsocket.class, URI.create(MAINNET_PUBLIC_URI));
+        HttpsURLConnection conn = (HttpsURLConnection) new URL(url.toString())
+                .openConnection();
+                conn.setRequestMethod("GET");
 
-            JSONObject obj = new JSONObject();
-            obj.put("op", "ping");
-            session.getBasicRemote().sendObject(obj);
-            
-            session.getBasicRemote().sendText(getAuthMessage());
-            // session.getBasicRemote().sendText(subscribe("subscribe", "instrument_info.100ms.BTCUSD"));
-            session.getBasicRemote().sendText(subscribe("subscribe","candle.1.BTCUSDT"));
-//            session.getBasicRemote().sendText(subscribe("subscribe", "order"));
-            java.io.BufferedReader r = new java.io.BufferedReader(new java.io.InputStreamReader( System.in));
-            while(true){
-                String line=r.readLine();
-                if(line.equals("quit")) break;
-                session.getBasicRemote().sendText(line);
-            }
+                conn.setDoInput(true);
 
-        } catch (Exception ex) {
-            ex.printStackTrace();
+        BufferedReader br = new BufferedReader(new InputStreamReader(conn.getInputStream()));
+
+        StringBuilder sb = new StringBuilder();
+        String line = null;
+        while ((line = br.readLine()) != null) {
+            sb.append(line).append("\n");
+
         }
+
+        br.close();
+
+        System.out.println(sb);
+        
+
+//         try {
+//             WebSocketContainer container = ContainerProvider.getWebSocketContainer();
+//             //String uri = "wss://stream.bybit.com/realtime";
+//             // String uri = "wss://stream.bytick.com/realtime";
+//             // String uri = "wss://stream-testnet.bybit-cn.com/realtime";
+//             // String uri = "wss://stream-testnet.bybit.com/realtime";
+//             container.connectToServer(BybitWebsocket.class, URI.create(MAINNET_PUBLIC_URI));
+
+//             JSONObject obj = new JSONObject();
+//             obj.put("op", "ping");
+//             session.getBasicRemote().sendObject(obj);
+            
+//             session.getBasicRemote().sendText(getAuthMessage());
+//             // session.getBasicRemote().sendText(subscribe("subscribe", "instrument_info.100ms.BTCUSD"));
+//             session.getBasicRemote().sendText(subscribe("subscribe","candle.1.BTCUSDT"));
+// //            session.getBasicRemote().sendText(subscribe("subscribe", "order"));
+//             java.io.BufferedReader r = new java.io.BufferedReader(new java.io.InputStreamReader( System.in));
+//             while(true){
+//                 String line=r.readLine();
+//                 if(line.equals("quit")) break;
+//                 session.getBasicRemote().sendText(line);
+//             }
+
+//         } catch (Exception ex) {
+//             ex.printStackTrace();
+//         }
     }
 }
+
+
+
+
+
+
